# dashboard_pliki

dashboard3/: CMakeLists.txt  doc.txt  doxygen.txt  resources.qrc
dashboard3/doc/html/: annotated.html  blinker_8h_source.html  can_8h_source.html  classBlinker-members.html  classBlinker.html  classBlinker__coll__graph.dot  classCAN-members.html  classCAN.html  classClock-members.html  classClock.html  classClock__inherit__graph.dot  classSystem-members.html  classSystem.html  classSystem__coll__graph.dot  classValueInfo-members.html  classValueInfo.html  classValueInfo__coll__graph.dot  classes.html  clock_8h_source.html  dbc_8h_source.html  dir_064333b92f1e230ca2b2bb60e56accb2.html  dir_06480aa6a2a2b563bed69a10f93e16c6.html  dir_42224b4d3dacd2da29b014de7c6a7764.html  dir_4fe189dd9a291c828baff0720fe16f5d.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_721865ac18f5179cf2211d1b67312542.html  dir_a79c168ca909e4d478fea20efc116125.html  dir_abfc60b2370f82eeb50c2932483ed56f.html  dir_ae01f06b0a3f805600d01ca6bd21139a.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_ccb6d769854c26ac806c4c8ad914a1de.html  dir_e5b3f140b677d12f061430398c4464c9.html  dir_f315b379889fde23168cba3fe99c18a3.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  (+19 more)
dashboard3/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
dashboard3/doc/latex/: annotated.tex  classBlinker.tex  classBlinker.tex.tmp  classBlinker__coll__graph.dot  classCAN.tex  classClock.tex  classClock__coll__graph.dot  classSystem.tex  classSystem__coll__graph.dot  classValueInfo.tex  classValueInfo__inherit__graph.dot  hierarchy.tex  refman.tex  structQT__WARNING__DISABLE__DEPRECATED_1_1qt__meta__tag__ZN5ClockE__t.tex  structQT__WARNING__DISABLE__DEPRECATED_1_1qt__meta__tag__ZN7BlinkerE__t.tex  structQT__WARNING__DISABLE__DEPRECATED_1_1qt__meta__tag__ZN9ValueInfoE__t.tex  structdeviceInfo.tex  structdeviceInfo__coll__graph.dot  structdeviceSpecs.tex
dashboard3/inc/: blinker.h  can.h  clock.h  dbc.h  includes.h  system.h  valueinfo.h
dashboard3/qml/: Blinker.qml  Lights.qml  Main.qml  Powermeter.qml  Speedometer.qml  Warnings.qml
dashboard3/src/: blinker.cpp  can.cpp  clock.cpp  dbc.cpp  main.cpp  system.cpp  valueinfo.cpp
eko_dashboard/: CMakeLists.txt
eko_dashboard/inc/: blinker.h  clock.h  valueinfo.h
eko_dashboard/qml/: BatteryLevel.qml  Blinker.qml  Current_gear.qml  Driving_mode.qml
eko_dashboard/src/: blinker.cpp  clock.cpp  main.cpp  valueinfo.cpp
